# Market-Intelligence-Research-Agent.

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  postman_collection.json  sample_output.json
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
backend/: .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_monitor_trigger_snapshot.py
backend/app/: config.py  main.py
backend/app/agent/: edges.py  events.py  graph.py  prompts.py  state.py
backend/app/agent/nodes/: planner.py  reflection_critic.py  synthesizer.py  ticker_extractor.py  tool_executor.py
backend/app/agent/utils/: dates.py
backend/app/api/: analyze.py  monitor.py  ops.py  resolve.py  schemas.py  status.py
backend/app/cache/: dedupe.py  redis_cache.py
backend/app/llm/: budget.py  client.py  pricing.yaml  retries.py
backend/app/monitoring/: baselines.py  scheduler.py  triggers.py
backend/app/observability/: logging.py  metrics.py  ratelimit.py
backend/app/persistence/: db.py  models.py  repos.py
backend/app/resilience/: breakers.py  http_client.py
backend/app/tools/: base.py  correlation.py  edgar.py  market_data.py  news_sentiment.py  peer_fundamentals.py
backend/app/workers/: arq_settings.py  jobs.py
backend/eval/: golden_cases.yaml  judge.py  model_benchmark.yaml  rubric.md  run_eval.py  run_model_benchmark.py
backend/tests/: conftest.py  test_budget.py  test_dedupe.py  test_events_backpressure.py  test_monitoring_triggers.py  test_persistence.py  test_planner.py  test_reflection.py  test_schemas.py  test_tool_executor_degraded.py
docs/: model_benchmark.md  monitoring.md  postman_collection.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/e2e/: analyze.spec.ts  full_ui.spec.ts
(+15 files in other folders)
