[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mira"
version = "0.1.0"
description = "Market Intelligence & Research Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx[http2]>=0.28",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "redis[hiredis]>=5.2",
    "arq>=0.26",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "openai>=1.55",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=2.1",
    "pandas-market-calendars>=4.4",
    "tenacity>=9.0",
    "pybreaker>=1.2",
    "slowapi>=0.1.9",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "hypothesis>=6.122",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
]

[tool.setuptools.packages.find]
include = ["app*", "eval*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/migrations/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
